[package]
name = "fqgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
simple-eyre = "0.3.1"
clap = { version = "4.1.10", features = ["derive", "usage"] }
stderrlog = "0.5.4"
log = "0.4.17"
flate2 = "1.0.25"
