[package]
name = "fqbarcode"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
rand = "0.8.5"
simple-eyre = "0.3.1"
clap = { version = "4.1.10", features = ["derive", "usage"] }
stderrlog = "0.5.4"
log = "0.4.17"
flate2 = "1.0.25"
levenshtein = "1.0.5"
